--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="images/abt.jpg" alt="">
+      <img src="Images/abt.jpg" alt="">
     </div>
     <div class="right">
       <div class="topic">Editing Is My Passion</div>
